<resources>

    <string name="app_name">GoGoGadgetoCar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="userName">Username</string>
    <string name="userPassword">Password</string>
    <string name="login">Log In</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="addNewDistance">New Route</string>
    <string name="fuel">Refuel</string>
    <string name="mainMenu">Hauptmenu</string>
    <string name="title_activity_new_distance_select_driver">Select driver</string>
    <string name="title_activity_fuel_select_member">Select member</string>
    <string name="title_activity_new_distance">New distance</string>
    <string name="driver">Driver</string>
    <string name="numberOfDriver">AMOUNT</string>
    <string name="change">change</string>
    <string name="distanceKM">Start driving at milage:</string>
    <string name="send">Send</string>
    <string name="mainmenu">Mainmenu</string>
    <string name="title_activity_fuel_fragment">Fuel</string>
    <string name="payment">Amount (€)</string>
    <string name="payer">Paid by</string>
    <string name="payername">Name</string>
    <string name="title_activity_car_group">Car group</string>
    <string name="joinGroup">Join Group</string>
    <string name="leaveGroup">Leave Group</string>
    <string name="createGroup">Create group</string>
    <string name="title_activity_join_car_group">Join car group</string>
    <string name="finished">finished</string>
    <string name="register">Register</string>
    <string name="userEmail">Email</string>
    <string name="title_activity_register">Register</string>
    <string name="name">Name</string>
    <string name="carGroupId">Car Group Id</string>
    <string name="title_activity_leave_car_group">Leave car group</string>
    <string name="selectedGroup">Selected group</string>
    <string name="groupId">GROUPID</string>
    <string name="leave">Leave</string>
    <string name="title_activity_create_car_group">Create car group</string>
    <string name="title_activity_logout">Logout</string>
    <string name="groupName">Group name</string>
    <string name="newMileage">Fueled at Mileage:</string>
    <string name="newPassword">New password</string>
    <string name="repeatNewPassword">Repeat new password</string>
    <string name="cash">Cash</string>
    <string name="title_activity_dept">Depts</string>
    <string name="currentMileage">Current mileage</string>
    <string name="currentCarGroupId">Current group id:</string>
    <string name="id">ID</string>
    <string name="appName">GogoGadgetoCar</string>

</resources>