<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentCarGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/joinCarGroupButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/joinGroup" />

    <Button
        android:id="@+id/leaveCarGroupButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/joinCarGroupButton"
        android:layout_below="@+id/joinCarGroupButton"
        android:layout_marginTop="50dp"
        android:text="@string/leaveGroup" />

    <Button
        android:id="@+id/createCarGroupButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/leaveCarGroupButton"
        android:layout_below="@+id/leaveCarGroupButton"
        android:layout_marginTop="50dp"
        android:text="@string/createGroup" />

</RelativeLayout>
