<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/driverTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="66dp"
        android:text="@string/driver" />

    <Button
        android:id="@+id/InsertDistanceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:text="@string/send" />

    <TextView
        android:id="@+id/numberOfDriversTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/driverTextView"
        android:layout_below="@+id/driverTextView"
        android:layout_marginTop="38dp"
        android:text="@string/numberOfDriver" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numberOfDriversTextView"
        android:layout_below="@+id/numberOfDriversTextView"
        android:layout_marginTop="46dp"
        android:text="@string/distanceKM" />

    <EditText
        android:id="@+id/travelledDistanceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/distanceTextView"
        android:layout_below="@+id/distanceTextView"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

</RelativeLayout>
