<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/joinCarGroupIdEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/joinCarGroupIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/joinCarGroupIdEditText"
        android:layout_alignLeft="@+id/joinCarGroupIdEditText"
        android:layout_marginBottom="33dp"
        android:text="@string/carGroupId" />

    <Button
        android:id="@+id/joinCarGroupSendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="121dp"
        android:text="@string/send" />

    <TextView
        android:id="@+id/JoinCarGroupPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/joinCarGroupIdEditText"
        android:layout_below="@+id/joinCarGroupIdEditText"
        android:layout_marginTop="20dp"
        android:text="@string/userPassword" />

    <EditText
        android:id="@+id/joinCarGroupPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/JoinCarGroupPasswordTextView"
        android:layout_below="@+id/JoinCarGroupPasswordTextView"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

</RelativeLayout>
