<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="75dp"
        android:text="@string/userName" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameTextView"
        android:layout_below="@+id/userNameTextView"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/userPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameEditText"
        android:layout_below="@+id/userNameEditText"
        android:layout_marginTop="25dp"
        android:text="@string/userPassword" />

    <EditText
        android:id="@+id/userPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userPasswordTextView"
        android:layout_below="@+id/userPasswordTextView"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userPasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/DebugOutputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInButton"
        android:layout_centerHorizontal="true"
        android:text="@string/debugOutput" />

</RelativeLayout>
